@@ -79,89 +79,6 @@ void hyphenate_word(int handle, char * word) {
 	voikko_free_hyphenate(result);
 }
 
-void print_tokens(int handle, const char * line) {
-	size_t len;
-	const char * lineptr;
-	size_t charlen;
-	mbstate_t mbstate;
-	enum voikko_token_type token_type;
-	size_t tokenchars;
-	len = strlen(line);
-	memset(&mbstate, '\0', sizeof(mbstate_t));
-	lineptr = line;
-	while (len > 0) {
-		token_type = voikko_next_token_cstr(handle, lineptr, len, &tokenchars);
-		switch (token_type) {
-			case TOKEN_WORD:
-				printf("W: \"");
-				break;
-			case TOKEN_PUNCTUATION:
-				printf("P: \"");
-				break;
-			case TOKEN_WHITESPACE:
-				printf("S: \"");
-				break;
-			case TOKEN_UNKNOWN:
-				printf("U: \"");
-				break;
-			case TOKEN_NONE:
-				printf("E: unknown token\n");
-				return;
-		}
-		while (tokenchars > 0) {
-			charlen = mbrlen(lineptr, len, &mbstate);
-			while (charlen > 0) {
-				putchar(lineptr[0]);
-				lineptr++;
-				charlen--;
-				len--;
-			}
-			tokenchars--;
-		}
-		printf("\"\n");
-	}
-}
-
-void split_sentences(int handle, const char * line) {
-	size_t len;
-	const char * lineptr;
-	size_t charlen;
-	mbstate_t mbstate;
-	enum voikko_sentence_type sentence_type;
-	size_t sentencechars;
-	len = strlen(line);
-	memset(&mbstate, '\0', sizeof(mbstate_t));
-	lineptr = line;
-	while (len > 0) {
-		sentence_type = voikko_next_sentence_start_cstr(handle, lineptr, len,
-		                &sentencechars);
-		switch (sentence_type) {
-			case SENTENCE_NONE:
-				printf("E: %s\n", lineptr);
-				return;
-			case SENTENCE_PROBABLE:
-				printf("B: ");
-				break;
-			case SENTENCE_POSSIBLE:
-				printf("P: ");
-				break;
-			case SENTENCE_NO_START:
-				// Not returned from this function
-				break;
-		}
-		while (sentencechars > 0) {
-			charlen = mbrlen(lineptr, len, &mbstate);
-			while (charlen > 0) {
-				putchar(lineptr[0]);
-				lineptr++;
-				charlen--;
-				len--;
-			}
-			sentencechars--;
-		}
-		printf("\n");
-	}
-}
 
 int main(int argc, char ** argv) {
 	size_t size = LIBVOIKKO_MAX_WORD_CHARS;
@@ -173,8 +90,6 @@ int main(int argc, char ** argv) {
 	int minhwlen;
 	int iclevel;
 	int i;
-	int tokenize = 0;
-	int split_snts = 0;
 	
 	line = malloc(size);
 	if (line == 0) {
@@ -217,12 +132,6 @@ int main(int argc, char ** argv) {
 			iclevel = atoi(argv[i] + 25);
 			voikko_set_int_option(handle, VOIKKO_INTERSECT_COMPOUND_LEVEL, iclevel);
 		}
-		else if (strncmp(argv[i], "--tokenize", 10) == 0) {
-			tokenize = 1;
-		}
-		else if (strncmp(argv[i], "--split-sentences", 17) == 0) {
-			split_snts = 1;
-		}
 	}
 	
 	while (1) {
@@ -231,9 +140,7 @@ int main(int argc, char ** argv) {
 		if (chars_read > 0 && line[chars_read - 1] == '\n') {
 			line[chars_read - 1] = '\0';
 		}
-		if (split_snts) split_sentences(handle, line);
-		else if (tokenize) print_tokens(handle, line);
-		else hyphenate_word(handle, line);
+		hyphenate_word(handle, line);
 	}
 	free(line);
 	voikko_terminate(handle);
