@@ -35,6 +35,7 @@ BUILD_OPTIONS = voikkoutils.get_preference('voikkotest_build_options')
 ENCODING = voikkoutils.get_preference('encoding')
 HYPHENCMD = voikkoutils.get_preference('libvoikko_bin') + '/voikkohyphenate'
 SPELLCMD = voikkoutils.get_preference('libvoikko_bin') + '/voikkospell'
+GCCMD = voikkoutils.get_preference('libvoikko_bin') + '/voikkogc'
 DIFFVIEWCMD = voikkoutils.get_preference('diffviewcmd')
 
 langcode = "fi_FI"
@@ -239,7 +240,7 @@ def tokenizer_tests():
 	resultfile = WORKSPACE + "/tokenizer.txt"
 	expresults = SVNROOT + "/trunk/tests/tokenizer/output.txt"
 	sys.stderr.write("Testing next_token functions...\n")
-	os.system('cat "%s" | "%s" --tokenize > "%s"' % (testfile, HYPHENCMD, resultfile))
+	os.system('cat "%s" | "%s" --tokenize > "%s"' % (testfile, GCCMD, resultfile))
 	os.system('diff -U 0 "%s" "%s"' % (expresults, resultfile))
 
 # Run sentence tests
@@ -248,7 +249,7 @@ def sentence_tests():
 	resultfile = WORKSPACE + "/sentence-next.txt"
 	expresults = SVNROOT + "/trunk/tests/sentence/next-out.txt"
 	sys.stderr.write("Testing next_sentence_start functions...\n")
-	os.system('cat "%s" | "%s" --split-sentences > "%s"' % (testfile, HYPHENCMD, resultfile))
+	os.system('cat "%s" | "%s" --split-sentences > "%s"' % (testfile, GCCMD, resultfile))
 	os.system('diff -U 0 "%s" "%s"' % (expresults, resultfile))
 
 # START OF MAIN PROGRAM
