@@ -1,3 +1,8 @@
+2008-06-29 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Move grammar checking related functionality from
+	  voikkohyphenate to a new test tool voikkogc.
+
 2008-06-28 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add API for grammar checking.
